fix for fdo#51990 process external refs for macros

Change-Id: I4fe1d7240f277b532e11d2fbb5aa18f54f2c4695
(cherry picked from commit f3a0dd8fbc3ead1fe1ec1faec3377cedaacadd93)