sc/source/core/tool/interpr4.cxx
@@ -3215,6 +3215,22 @@ void ScInterpreter::ScMacro()
             case svString:
                 pPar->PutString( GetString() );
             break;
+            case svExternalSingleRef:
+            {
+                ScExternalRefCache::TokenRef pToken;
+                PopExternalSingleRef(pToken);
+                if ( nGlobalError )
+                {
+                    SetError( errIllegalArgument);
+                    bOk = false;
+                }
+                else
+                {
+                    pPar->PutDouble( pToken->GetDouble() );
+                    bOk = true;
+                }
+            }
+            break;
             case svSingleRef:
             {
                 ScAddress aAdr;
@@ -3275,11 +3291,16 @@ void ScInterpreter::ScMacro()
                 }
             }
             break;
+            case svExternalDoubleRef:
             case svMatrix:
             {
-                ScMatrixRef pMat = PopMatrix();
+                ScMatrixRef pMat;
+                if (nStackType == svMatrix)
+                    pMat = PopMatrix();
+                else
+                    PopExternalDoubleRef(pMat);
                 SCSIZE nC, nR;
-                if (pMat)
+                if (pMat && !nGlobalError)
                 {
                     pMat->GetDimensions(nC, nR);
                     SbxDimArrayRef refArray = new SbxDimArray;
